<resources>
    <string name="app_name">Secao-24_Motivation</string>
    <string name="home_header">Vamos começar?</string>
    <string name="edit_placeholder">Qual seu nome?</string>
    <string name="save_button">Salvar</string>
    <string name="toast_text">Por favor, informe o seu nome!</string>
    <string name="motivation_placeholder">Você não é derrotado quando perde, você é derrotado quando desiste!</string>
    <string name="user_greeting_placeholder">Olá, Kotlin!</string>
    <string name="button_new_phrase">Nova Frase</string>
    <string name="user_greeting">Olá, %s!</string>
    <string name="all_phrases_action">Mostra todas as frases</string>
    <string name="happy_phrases_action">Mostra frases felizes</string>
    <string name="sunny_phrases_action">Mostra frases ensolaradas</string>
</resources>