<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserActivity">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_all_phrases_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="true"
            android:contentDescription="@string/all_phrases_action"
            android:focusable="true"
            android:src="@drawable/ic_all_inclusive"
            tools:tint="?attr/colorPrimaryInverse" />

        <ImageView
            android:id="@+id/image_happy_phrases_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="118dp"
            android:clickable="true"
            android:contentDescription="@string/happy_phrases_action"
            android:focusable="true"
            android:src="@drawable/ic_happy"
            app:tint="?attr/colorOnPrimaryContainer" />

        <ImageView
            android:id="@+id/image_sunny_phrases_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="true"
            android:contentDescription="@string/sunny_phrases_action"
            android:focusable="true"
            android:src="@drawable/ic_sunny"
            app:tint="?attr/colorOnPrimaryContainer" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_hello_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:fontFamily="@font/cabin"
        tools:text="@string/user_greeting_placeholder" />

    <TextView
        android:id="@+id/text_motivation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="16dp"
        android:textAlignment="center"
        android:textSize="16sp"
        android:fontFamily="@font/cabin"
        android:textStyle="bold"
        tools:text="@string/motivation_placeholder" />

    <View
        android:layout_width="100dp"
        android:layout_height="4dp"
        android:layout_below="@id/text_motivation"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:background="?attr/colorPrimary" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_new_phrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="32dp"
        android:background="@drawable/round_corners"
        android:backgroundTint="?attr/colorPrimary"
        android:fontFamily="@font/cabin"
        android:paddingHorizontal="32dp"
        android:text="@string/button_new_phrase"
        android:textColor="?attr/colorOnPrimary"
        android:textStyle="bold" />
</RelativeLayout>