<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:text="@string/home_header"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textColor="?attr/colorOnPrimary"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_centerInParent="true"
        android:autofillHints="name"
        android:gravity="center"
        android:hint="@string/edit_placeholder"
        android:inputType="text"
        android:textColor="?attr/colorOnPrimary"
        android:textColorHint="?attr/colorOnPrimary"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="32dp"
        android:background="@drawable/round_corners"
        android:backgroundTint="?attr/colorPrimaryContainer"
        android:paddingHorizontal="28dp"
        android:text="@string/save_button"
        android:textColor="?attr/colorOnPrimaryContainer" />
</RelativeLayout>